update with user name request

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             <p>3. You can't select any option once time goes off.</p>
             <p>4. You will get points on the basis of your correct answer.</p>
           </div>
-          <div class="condition-actions">
+          <div class="name-modal glass">
+            <h2 class="modal-title">Enter Your Name</h2>
+            <input type="text" id="user-name" placeholder="Your Name" required />
+          </div>          <div class="condition-actions">
             <button class="exit-modal btn">Exit Quiz</button>
             <button class="start-quiz btn">Continue</button>
           </div>
