--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <div class="name-modal glass">
             <h2 class="modal-title">Enter Your Name</h2>
-            <input type="text" id="user-name" placeholder="Your Name" required />
+            <input type="text" id="user-name-input" placeholder="Your Name" required />
           </div>          <div class="condition-actions">
             <button class="exit-modal btn">Exit Quiz</button>
             <button class="start-quiz btn">Continue</button>
